// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInputWithUnit /> by default matches with snapshot 1`] = `
<div
  className="sc-htpNat hjmnFi k-Form-TextInputWithUnit"
>
  <input
    className="sc-bdVaJa NdpVx k-Form-TextInput k-Form-TextInputWithUnit__input k-Form-TextInput--regular"
    disabled={false}
    name="text"
    type="number"
  />
  <span
    className="k-Form-TextInputWithUnit__unit k-Form-TextInputWithUnit__unit--regular"
  />
</div>
`;

exports[`<TextInputWithUnit /> with disabled prop matches with snapshot 1`] = `
<div
  className="sc-htpNat hjmnFi k-Form-TextInputWithUnit"
>
  <input
    className="sc-bdVaJa NdpVx k-Form-TextInput k-Form-TextInputWithUnit__input k-Form-TextInput--regular k-Form-TextInput--disabled"
    disabled={true}
    name="text"
    type="number"
  />
  <span
    className="k-Form-TextInputWithUnit__unit k-Form-TextInputWithUnit__unit--regular k-Form-TextInputWithUnit__unit--disabled"
  />
</div>
`;

exports[`<TextInputWithUnit /> with error prop matches with snapshot 1`] = `
<div
  className="sc-htpNat hjmnFi k-Form-TextInputWithUnit"
>
  <input
    className="sc-bdVaJa NdpVx k-Form-TextInput k-Form-TextInputWithUnit__input k-Form-TextInput--regular k-Form-TextInput--error"
    disabled={false}
    name="text"
    type="number"
  />
  <span
    className="k-Form-TextInputWithUnit__unit k-Form-TextInputWithUnit__unit--regular k-Form-TextInputWithUnit__unit--error"
  />
</div>
`;

exports[`<TextInputWithUnit /> with size prop matches with snapshot 1`] = `
<div
  className="sc-htpNat hjmnFi k-Form-TextInputWithUnit"
>
  <input
    className="sc-bdVaJa NdpVx k-Form-TextInput k-Form-TextInputWithUnit__input k-Form-TextInput--big"
    disabled={false}
    name="text"
    type="number"
  />
  <span
    className="k-Form-TextInputWithUnit__unit k-Form-TextInputWithUnit__unit--big"
  />
</div>
`;

exports[`<TextInputWithUnit /> with unit matches with snapshot 1`] = `
<div
  className="sc-htpNat hjmnFi k-Form-TextInputWithUnit"
>
  <input
    className="sc-bdVaJa NdpVx k-Form-TextInput k-Form-TextInputWithUnit__input k-Form-TextInput--regular"
    disabled={false}
    name="text"
    type="number"
  >
    €
  </input>
  <span
    className="k-Form-TextInputWithUnit__unit k-Form-TextInputWithUnit__unit--regular"
  />
</div>
`;

exports[`<TextInputWithUnit /> with valid prop matches with snapshot 1`] = `
<div
  className="sc-htpNat hjmnFi k-Form-TextInputWithUnit"
>
  <input
    className="sc-bdVaJa NdpVx k-Form-TextInput k-Form-TextInputWithUnit__input k-Form-TextInput--regular k-Form-TextInput--valid"
    disabled={false}
    name="text"
    type="number"
  />
  <span
    className="k-Form-TextInputWithUnit__unit k-Form-TextInputWithUnit__unit--regular k-Form-TextInputWithUnit__unit--valid"
  />
</div>
`;
